Bug:  PRD Reviewer:  Self Comments:  Changes for GWT based binder views.  {51st} 1. Added the ability for the description to be expanded and collapsed.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.properties
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingDataTableImageBundle.java
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/DescriptionPanel.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -19,18 +19,23 @@
 	/* ...End:  Bread crumb panel styles. */
 	
 	/* ...Start:  Description panel styles. */
-		.vibe-descriptionHTML  {}
-		.vibe-descriptionPanel {padding-left: 10px;}
-		.vibe-descriptionText  {}
+		.vibe-descriptionContent        {}
+		.vibe-descriptionContentClipped {height: 250px; overflow: auto !important;}
+		.vibe-descriptionExpanderAnchor {text-decoration: none; cursor: pointer;}
+		.vibe-descriptionExpanderImg    {position: absolute; right: 0px; top: -8px; border: 0px none;}
+		.vibe-descriptionExpanderBar    {margin-top: 0.5em; margin-bottom: 8px; border-bottom: 1px solid #CCC; position: relative;}
+		.vibe-descriptionHTML           {overflow: hidden;}
+		.vibe-descriptionPanel          {padding-left: 10px;}
+		.vibe-descriptionText           {overflow: hidden;}
 	/* ...End:  Description panel styles. */
 	
 	/* ...Start:  Entry menu panel styles. */
-		.vibe-entryMenuPanel {padding: 0px !important; padding-top: 10px !important;}
-		.vibe-entryMenuBar {}
-		.vibe-entryMenuBarItem {}
-		.vibe-entryMenuPopup {}
+		.vibe-entryMenuPanel     {padding: 0px !important; padding-top: 10px !important;}
+		.vibe-entryMenuBar       {}
+		.vibe-entryMenuBarItem   {}
+		.vibe-entryMenuPopup     {}
 		.vibe-entryMenuPopupItem {}
-		.vibe-entryMenuDisabled {color: silver !important;}
+		.vibe-entryMenuDisabled  {color: silver !important;}
 	/* ...End:  Entry menu panel styles. */
 	
 	/* ...Start:  Filter panel styles. */
